# Sst-bot

./: README.md
sst-bot/: pyproject.toml  requirements.txt
sst-bot/sst_bot/: main.py
sst-bot/sst_bot/misc/: test_diarization.ipynb  test_model.ipynb
sst-bot/sst_bot/nlp/: Diarization.py  infos.py
sst-bot/sst_bot/sst/: Diarization.py
